<resources>
    <string name="app_name">RecyclerViewApplication</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">Add</string>
    <string name="low">Low</string>
    <string name="select_priority">Select Priority</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="select_one">Select One</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="nothing_is_choosen">Nothing is choosen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">Todo</string>
    <string name="preparation">Preparation</string>
    <string name="completed">Completed</string>
    <string name="enter_text">Enter Text</string>
    <string name="date">Date</string>
</resources>